# OpenFASOC

./: pyproject.toml
openfasoc/common/drc-lvs-check/: run_lvspex.sh
openfasoc/generators/glayout/: setup.py
openfasoc/generators/glayout/glayout/flow/blocks/composite/coeff_cap/: __init__.py  coeff_cap.py
openfasoc/generators/glayout/glayout/flow/blocks/composite/comparator/: __init__.py  comparator.py
openfasoc/generators/glayout/glayout/flow/blocks/composite/crossbar/: crossbar.py
openfasoc/generators/glayout/glayout/flow/blocks/composite/diff_buffer/: diff_buffer.py  diff_buffer.spice  diff_buffer_tb.spice
openfasoc/generators/glayout/glayout/flow/blocks/elementary/: __init__.py
openfasoc/generators/glayout/glayout/flow/pdk/gf180_mapped/: gf180_mapped.py  grules.py
openfasoc/generators/glayout/glayout/flow/pdk/util/: snap_to_grid.py
openfasoc/generators/glayout/glayout/flow/primitives/: fet.py  mimcap.py  resistor.py
openfasoc/generators/glayout/tests/: test_fixed_conductance_crossbar.py
openfasoc/generators/glayout/tests/pex/: test_fixed_conductance_crossbar_pex.py
openfasoc/generators/temp-sense-gen/blocks/sky130hd/lef/: HEADER.lef  SLC.lef
openfasoc/generators/temp-sense-gen/flow/design/sky130hd/tempsense/: config.mk
openfasoc/generators/temp-sense-gen/flow/scripts/: detail_place.tcl  save_images.tcl  write_ref_sdc.tcl
openfasoc/generators/temp-sense-gen/flow/scripts/openfasoc/: custom_place.tcl  fastroute.tcl
openfasoc/generators/temp-sense-gen/tools/: temp-sense-gen.py
(+19 files in other folders)
